--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-netlify": "^1.0.0-next.22",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.131",
     "autoprefixer": "^10.3.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
